--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8 offset-2 p-4">
-      <cr-cryptos-today></cr-cryptos-today>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" [routerLink]="['/']"><i class="fa fa-bitcoin fa-2x"></i></a>
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav">
+      <li class="nav-item" [routerLinkActive]="'active'" >
+        <a class="nav-link" [routerLink]="['/cryptos']"><i class="fa fa-money"></i> Currencies</a>
+      </li>
+      <li class="nav-item" [routerLinkActive]="'active'">
+        <a class="nav-link" [routerLink]="['/wallet']"><i class="fa fa-google-wallet"></i> Wallet</a>
+      </li>
+    </ul>
   </div>
+</nav>
+<div class="container-fluid">
+  <router-outlet></router-outlet>
 </div>
